--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-
+/* app/globals.css */
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,12 +20,9 @@
   }
 }
 
-/* body {
+body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-} */
-
-body {
-  @apply bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100;
 }
+
